Fix row view on small screen

--- a/src/components/barter/item/index.sass
+++ b/src/components/barter/item/index.sass
@@ -305,7 +305,7 @@ div[class^="barter-item-"]
 			margin: 0 0 .85em
 
 		.to
-			display: inline-flex
+			display: grid
 			width: auto
 
 			ul
